# The-Lost-Cow-Hunter

./: .gitignore  CMakeLists.txt  Makefile  README.md  The-Lost-Cow-Hunter.cbp  The-Lost-Cow-Hunter.layout
data/: flashlight.mtl
include/: player.hpp  spotlight.hpp
src/: main.cpp  shader_fragment.glsl  shader_vertex.glsl  textrendering.cpp
